Spacing fix. MODS can get long

--- a/app/assets/stylesheets/charon.scss
+++ b/app/assets/stylesheets/charon.scss
@@ -148,3 +148,11 @@ footer {
 .ace_editor{
   border: 1px solid;
 }
+
+#mods {
+  dl {
+    dd {
+      margin-bottom: auto;
+    }
+  }
+}
